<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf</artifactId>
        <version>2.3.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>cxf-blueprint</artifactId>
    <groupId>org.apache.cxf.blueprint</groupId>
    <name>Apache CXF Blueprint</name>
    <modules>
        <module>jaxws</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <aries.blueprint.version>1.0.0-incubating-SNAPSHOT</aries.blueprint.version>
        <cxf.version>2.3.0-SNAPSHOT</cxf.version>
        <felix.osgi.version>1.4.0</felix.osgi.version>
        <geronimo-jta_1.1_spec.version>1.1.1</geronimo-jta_1.1_spec.version>
        <geronimo-ws-metadata_2.0_spec.version>1.1.2</geronimo-ws-metadata_2.0_spec.version>
        <junit.version>4.7</junit.version>
        <slf4j.version>1.5.10</slf4j.version>
    </properties>

    <!-- ================================================ -->
    <!--            Repository Configuration              -->
    <!-- ================================================ -->

    <repositories>

        <repository>
            <id>central</id>
            <name>Central Maven Repo</name>
            <url>http://repo1.maven.org/maven2</url>
        </repository>

        <repository>
            <id>ServiceMix.Repo</id>
            <name>ServiceMix Maven Repo</name>
            <url>http://svn.apache.org/repos/asf/servicemix/m2-repo</url>
        </repository>

        <repository>
            <id>fusesource</id>
            <name>Fusesource Release Repository</name>
            <url>http://repo.fusesource.com/maven2</url>
        </repository>

        <repository>
            <id>fusesource-deps</id>
            <name>Fusesource Release Repository</name>
            <url>http://repo.fusesource.com/maven2-all</url>
        </repository>

        <repository>
            <id>com.springsource.repository.bundles.release</id>
            <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
            <url>http://repository.springsource.com/maven/bundles/release</url>
        </repository>

        <repository>
            <id>com.springsource.repository.bundles.external</id>
            <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
            <url>http://repository.springsource.com/maven/bundles/external</url>
        </repository>

        <repository>
            <id>eviware</id>
            <url>http://www.eviware.com/repository/maven2/</url>
        </repository>

        <repository>
            <id>Version99</id>
            <name>Version 99 Does Not Exist Maven repository</name>
            <layout>default</layout>
            <url>http://no-commons-logging.zapto.org/mvn2</url>
        </repository>

        <repository>
            <id>OPS4TJ</id>
            <name>OPS4J Snapshot repository</name>
            <url>http://repository.ops4j.org/mvn-snapshots</url>
        </repository>

        <repository>
            <id>Apache snapshots</id>
            <name>Apache snapshots</name>
            <url>https://repository.apache.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

    </repositories>

    <pluginRepositories>

        <pluginRepository>
            <id>fuse.plugins</id>
            <url>http://repo.fusesource.com/maven2</url>
        </pluginRepository>

        <pluginRepository>
            <id>eviware.plugins</id>
            <url>http://www.eviware.com/repository/maven2</url>
        </pluginRepository>

        <!-- This repo is corrupt - commenting it out -->
        <!--pluginRepository>
            <id>Codehaus Mojos</id>
            <url>http://repository.codehaus.org/org/codehaus/mojo/</url>
        </pluginRepository-->
    </pluginRepositories>

    <dependencies>

        <dependency>
            <groupId>org.apache.aries.blueprint</groupId>
            <artifactId>org.apache.aries.blueprint</artifactId>
            <version>${aries.blueprint.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-core</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxws</artifactId>
            <version>${cxf.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-ws-metadata_2.0_spec</artifactId>
            <version>${geronimo-ws-metadata_2.0_spec.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.osgi.compendium</artifactId>
            <version>${felix.osgi.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.osgi.core</artifactId>
            <version>${felix.osgi.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Building from Java 1.6 source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <!-- Convention for distinguishing integration tests from unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--
                        Don't run the wcsri-monitoring "mbeans" tests, because they
                        require ServiceMix to be running:
                    -->
                    <excludedGroups>mbeans,aop</excludedGroups>
                    <!--
                        Uncomment the following two lines for multi-threaded test
                        execution
                    -->
                    <!--parallel>true</parallel-->
                    <!--threadCount>4</threadCount-->
                    <!--
                        TODO: To skip tests, uncomment the next line >
                        <skipTests>true</skipTests
                    -->
                    <excludes>
                        <exclude>**/itest/**</exclude>
                    </excludes>

                    <!--
                        TODO: See AOPTest.java for instructions on executing "aop" tests >
                        <groups>aop</groups
                    -->
                    <!--
                        Use the aspectjweaver agent for load-time weaving during "aop"
                        tests.
                        wcsri/trunk/gds-pojo-service/test/resources/META-INF/aop.xml file
                        will be used to defined LTW aspects. >
                        <argLine>-javaagent:${REPO}/org/aspectj/aspectjweaver/1.6.7/aspectjweaver-1.6.7.jar
                        -Xms40m -Xmx768M -XX:PermSize=128M -XX:MaxPermSize=512M</argLine
                    -->

                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <configuration>
                    <instrumentation>
                        <ignores>
                            <ignore>com.example.boringcode.*</ignore>
                        </ignores>
                        <excludes>
                            <exclude>**/itest/**</exclude>
                            <exclude>**/test/**</exclude>
                            <exclude>**/aspects/**</exclude>
                        </excludes>
                    </instrumentation>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


</project>
